--- a/source/_posts/2022-11-04 推特与Mastodon比较.md
+++ b/source/_posts/2022-11-04 推特与Mastodon比较.md
@@ -3,10 +3,12 @@ title: Twitter 与 Mastodon 之间的比较
 date: 2022-11-04 18:05:23
 updated: 2022-11-04 22:16:00
 tags:
-desc: 就只是单纯的将推特与 Mastodon 比较比较一下
+desc: 就只是单纯的将 Twitter 与 Mastodon 比较比较一下啦 awa
+twitter: big
+twitter_pic: /posts/20221104/24edbb30a8f0/head.png
 ---
 
-咱就只是单纯的将推特与 Mastodon 比较比较以下，感谢 Moe 陪着一起归纳整理比较两者之间的差别
+咱就只是单纯的将 Twitter 与 Mastodon 比较比较以下，感谢 Moe 陪着一起归纳整理比较两者之间的差别
 
 虽说本来是给 Moe 做文章材料的，做完之后问了一下她，说可以发布在自己网站上，于是就修改了一小部分内容后挂了上来
 
