--- a/source/_posts/2022-11-04 推特与Mastodon比较.md
+++ b/source/_posts/2022-11-04 推特与Mastodon比较.md
@@ -5,7 +5,7 @@ updated: 2022-11-05 07:11:00
 tags:
 desc: 就只是单纯的将 Twitter 与 Mastodon 比较比较一下啦 awa
 twitter: big
-twitter_pic: /posts/20221104/24edbb30a8f0/head.png
+twitter_pic: https://nekoq.eu.org/posts/20221104/24edbb30a8f0/head.png
 ---
 
 咱就只是单纯的将 Twitter 与 Mastodon 比较比较以下，感谢 Moe 陪着一起归纳整理比较两者之间的差别
