添加参考内容

--- a/source/_posts/2022-11-04 推特与Mastodon比较.md
+++ b/source/_posts/2022-11-04 推特与Mastodon比较.md
@@ -59,6 +59,8 @@ twitter_pic: https://nekoq.eu.org/posts/20221104/24edbb30a8f0/head.png
 - [Mastodon 帮助文档（中文）](https://docs.joinmastodon.org/zh-cn/)
 - [Twitter Help](https://help.twitter.com)
 - [Twitter Developer Platform](https://developer.twitter.com/zh-cn/docs)
+- [杂谈：从 Twitter 迁移至 Mastodon（@Moe23333）](https://moe23333.vercel.app/posts/twitter-to-mastodon)
+- [Mastodon (biplus.date) 沧岚](https://mastodon.social/@Moe23333/109286982956728232)
 - 各编辑人员在使用推特和 Mastodon 两个社交平台时积攒下来的使用经验
 
 ---
