--- a/data/blog/twitter-and-mastodon.mdx
+++ b/data/blog/twitter-and-mastodon.mdx
@@ -4,7 +4,7 @@ date: 2022-11-04 18:05:23
 tags: []
 summary: 就只是单纯的将 Twitter 与 Mastodon 比较比较一下啦 awa
 twitter: big
-images: ['/blog/twitter-and-mastodon/head.png']
+images: ['static/blog/twitter-and-mastodon/head.png']
 ---
 
 咱就只是单纯的将 Twitter 与 Mastodon 比较比较以下，感谢 Moe 陪着一起归纳整理比较两者之间的差别
@@ -32,7 +32,7 @@ images: ['/blog/twitter-and-mastodon/head.png']
   <iframe src="https://onedrive.live.com/embed?cid=4A8148EC7FFBF4D4&resid=4A8148EC7FFBF4D4%215734&authkey=AMfo7VhuO2qliQ0&em=2" style={{'position': 'absolute', 'height': '100%', 'width': '100%', 'top': '0', 'left': '0'}}></iframe>
 </div>
 
-[推特与Mastodon比较.xlsx](推特与Mastodon比较.xlsx)
+[推特与Mastodon比较.xlsx](static/blog/推特与Mastodon比较.xlsx)
 
 ---
 
