--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -151,7 +151,7 @@ canonicalUrl: '2022'
 
 最后，还是和原来一样的，感谢屏幕前的你耐心阅读这篇废话满满的年终总结
 
-咱们下一篇文章，或者说，明年见~
+咱们下一篇文章，或者说，明年见
 
 <div class="iframe-container">
     <iframe src="//player.bilibili.com/player.html?aid=348819031&bvid=BV1JR4y1k7A4&cid=926763837&page=1"></iframe>
