--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -153,6 +153,23 @@ canonicalUrl: '2022'
 
 咱们下一篇文章，或者说，明年见
 
+<style>
+    .iframe-container {
+  /* 
+  padding-top 为高/宽的值
+  16:9 为 9/16=56.25%
+  */
+  padding-top: 56.25%;
+  position: relative;
+}
+.iframe-container iframe {
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   left: 0;
+}
+</style>
 <div class="iframe-container">
     <iframe src="//player.bilibili.com/player.html?aid=348819031&bvid=BV1JR4y1k7A4&cid=926763837&page=1"></iframe>
 </div>
