--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -217,7 +217,7 @@ canonicalUrl: '2022'
 加更时间：2022.12.29 14:59
 
 [^1]: 很抱歉咱会临时加更内容，屏幕前的您可以选择性的继续阅读，亦或者结束这篇文章的阅读。无论如何，咱都感谢您读完这一文章。祝您新年快乐！
-[^2]: 她的昵称叫 “狗被染藍”，是个很有趣的人
+[^2]: 她的昵称叫 [狗被染藍](https://twitter.com/dogesir_)，是个非常有趣的人呢！
 [^3]: 见[这里](https://twitter.com/STC2722/status/1608341782059941888)
 [^4]: 原句是 “下一次的相遇可能在任何地方，但我们始终灿烂如星海。”，出自 [【解散】遗落在花寄宿舍的物品。](https://www.bilibili.com/read/cv10019394)
 [^5]: 摘抄于咱当天所设置的微信状态，内容稍有改动
