--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -218,7 +218,28 @@ canonicalUrl: '2022'
 
 在同一天，又有一个人[^6]踏上了她的旅程
 
-加更时间: 2022.12.30
+> 僕ら  
+> 我们
+> 肩並べ 手取り合って
+> 肩并着肩 双手紧握
+> 進んでく
+> 共同向前
+> 辛い時だって 二人だって
+> 即便难过 也要在一起
+> 誓っただろう
+> 我们发过誓的吧
+> 遥か遠く終わらない
+> 遥远深邃的
+> べテルギウス (Betelgeuse)[^8]
+> 参宿四
+> 君にも見えるだろう
+> 你也能看到吧
+> 祈りが
+> 那份祈愿
+>
+> —— ベテルギウス／参宿四[^7]
+
+加更时间: 2022.12.30 - 2022.12.31
 
 [^1]: 很抱歉咱会临时加更内容，屏幕前的您可以选择性的继续阅读，亦或者结束这篇文章的阅读。无论如何，咱都感谢您读完这一文章。祝您新年快乐！
 [^2]: 她的昵称叫 [狗被染藍](https://twitter.com/dogesir_)，是个非常有趣的人呢！
@@ -226,3 +247,5 @@ canonicalUrl: '2022'
 [^4]: 原句是 “下一次的相遇可能在任何地方，但我们始终灿烂如星海。”，出自 [【解散】遗落在花寄宿舍的物品。](https://www.bilibili.com/read/cv10019394)
 [^5]: 摘抄于咱当天所设置的微信状态，内容稍有改动
 [^6]: 她的名字叫 Anilovr ,见 https://twitter.com/nmsl6653/status/1608663969014906885
+[^7]: 分词参考和歌词翻译来源:[【翻唱】ベテルギウス／参宿四【神楽めあ】](https://www.bilibili.com/video/BV1ur4y1J7ES)
+[^8]: 因为搜索到的日文歌词版本与参考的歌词版本稍有不同，因此，括号内为参考分词版本里的歌词。而参考分词里中这句只有翻译歌词，为参宿四的英文名称
