--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -237,7 +237,7 @@ canonicalUrl: '2022'
 > 祈りが
 > 那份祈愿
 >
-> —— ベテルギウス／参宿四[^7]
+> —— ベテルギウス／参宿四[^7][^9]
 
 加更时间: 2022.12.30 - 2022.12.31
 
@@ -249,3 +249,4 @@ canonicalUrl: '2022'
 [^6]: 她的名字叫 Anilovr ,见 https://twitter.com/nmsl6653/status/1608663969014906885
 [^7]: 分词参考和歌词翻译来源:[【翻唱】ベテルギウス／参宿四【神楽めあ】](https://www.bilibili.com/video/BV1ur4y1J7ES)
 [^8]: 因为搜索到的日文歌词版本与参考的歌词版本稍有不同，因此，括号内为参考分词版本里的歌词。而参考分词里中这句只有翻译歌词，为参宿四的英文名称
+[^9]: 因为在临走前，Anilovr 将其推特号昵称加上“#参宿四”，所以咱就选了这首歌作为一个分享
