jade 迁移到 pug && iframe 延迟加载

--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -171,7 +171,7 @@ canonicalUrl: '2022'
 }
 </style>
 <div class="iframe-container">
-    <iframe src="//player.bilibili.com/player.html?aid=348819031&bvid=BV1JR4y1k7A4&cid=926763837&page=1"></iframe>
+    <iframe src="//player.bilibili.com/player.html?aid=348819031&bvid=BV1JR4y1k7A4&cid=926763837&page=1" loading="lazy"></iframe>
 </div>
 
 ---
