加更内容新增折叠栏

--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -176,6 +176,9 @@ canonicalUrl: '2022'
 
 ---
 
+<details>
+<summary>临时加更</summary>
+
 ## 临时加更
 
 这一部分是发布完文章后还想要继续更新的内容，为已阅读过的你方便辨识而新开段落[^1]
@@ -250,3 +253,5 @@ canonicalUrl: '2022'
 [^7]: 分词参考和歌词翻译来源:[【翻唱】ベテルギウス／参宿四【神楽めあ】](https://www.bilibili.com/video/BV1ur4y1J7ES)
 [^8]: 因为搜索到的日文歌词版本与参考的歌词版本稍有不同，因此，括号内为参考分词版本里的歌词。而参考分词里中这句只有翻译歌词，为参宿四的英文名称
 [^9]: 因为在临走前，Anilovr 将其推特号昵称加上“#参宿四”，所以咱就选了这首歌作为一个分享
+
+</details>
