--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -185,7 +185,7 @@ canonicalUrl: '2022'
 
 ### 『到天空!』
 
-在圣诞节那几天，咱在推特上留意到了一个推友[^2]，嗯，想要尝试逃离这个世界
+在圣诞节那几天，咱在推特上留意到了一个推友，嗯，想要尝试逃离这个世界
 
 虽说咱也挺担心，但碍于许多事情咱也只能希望奇迹能发生
 
@@ -197,7 +197,7 @@ canonicalUrl: '2022'
 
 这或许...是咱第一次经历这种场面吧
 
-在加更之前，已经在推特上从他人途径[^3]确认过了，她已经离开了这个世界
+在加更之前，已经在推特上从他人途径确认过了，她已经离开了这个世界
 
 终究啊（苦笑）
 
@@ -208,18 +208,18 @@ canonicalUrl: '2022'
 愿我们不会遗忘，愿他们能在另外一边开心的活着
 
 > 即便下一次相遇在任何地方，或者说没机会了
-> 但我们始终灿烂如星海[^4]
+> 但我们始终灿烂如星海[^2]
 > 作为一个熟悉的陌生网友，也只能以这种方式，向网线的另一边传达着自己的祝福与祝愿
 > 
 > 『到天空!』
 > 「新年快乐」\
 > 
 > 晚安
-> 2022.12.29 03:58（UTC+8）[^5]
+> 2022.12.29 03:58（UTC+8)
 
 加更时间：2022.12.29 14:59
 
-在同一天，又有一个人[^6]踏上了她的旅程
+在同一天，又有一个人踏上了她的旅程
 
 > 僕ら  
 > 我们
@@ -233,25 +233,19 @@ canonicalUrl: '2022'
 > 我们发过誓的吧
 > 遥か遠く終わらない
 > 遥远深邃的
-> べテルギウス (Betelgeuse)[^8]
+> べテルギウス (Betelgeuse)
 > 参宿四
 > 君にも見えるだろう
 > 你也能看到吧
 > 祈りが
 > 那份祈愿
 >
-> —— ベテルギウス／参宿四[^7][^9]
+> —— ベテルギウス／参宿四[^3]
 
 加更时间: 2022.12.30 - 2022.12.31
 
 [^1]: 很抱歉咱会临时加更内容，屏幕前的您可以选择性的继续阅读，亦或者结束这篇文章的阅读。无论如何，咱都感谢您读完这一文章。祝您新年快乐！
-[^2]: 她的昵称叫 [狗被染藍](https://twitter.com/dogesir_)，是个非常有趣的人呢！
-[^3]: 见[这里](https://twitter.com/STC2722/status/1608341782059941888)
-[^4]: 原句是 “下一次的相遇可能在任何地方，但我们始终灿烂如星海。”，出自 [【解散】遗落在花寄宿舍的物品。](https://www.bilibili.com/read/cv10019394)
-[^5]: 摘抄于咱当天所设置的微信状态，内容稍有改动
-[^6]: 她的名字叫 Anilovr ,见 https://twitter.com/nmsl6653/status/1608663969014906885
-[^7]: 分词参考和歌词翻译来源:[【翻唱】ベテルギウス／参宿四【神楽めあ】](https://www.bilibili.com/video/BV1ur4y1J7ES)
-[^8]: 因为搜索到的日文歌词版本与参考的歌词版本稍有不同，因此，括号内为参考分词版本里的歌词。而参考分词里中这句只有翻译歌词，为参宿四的英文名称
-[^9]: 因为在临走前，Anilovr 将其推特号昵称加上“#参宿四”，所以咱就选了这首歌作为一个分享
+[^2]: 原句是 “下一次的相遇可能在任何地方，但我们始终灿烂如星海。”，出自 [【解散】遗落在花寄宿舍的物品。](https://www.bilibili.com/read/cv10019394)
+[^3]: 分词参考和歌词翻译来源:[【翻唱】ベテルギウス／参宿四【神楽めあ】](https://www.bilibili.com/video/BV1ur4y1J7ES)
 
 </details>
