--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -46,7 +46,7 @@ canonicalUrl: '2022'
 
 ~~手环今年是升级了两次来着，现在就是手持两手环~~
 
-{% image /static/blog/2022/Untitled.png 这是当时购买之后所拍的ww %}
+{% image /static/blog/2022/Untitled.png 这是当时购买之后所拍的ww fancybox:true %}
 
 挺有意思的是，手机是红米的，手环是小米的，电脑是红米的
 
