修改和补充一些东西
  - 本地调用 Noto Color Emoji
  - Line-1 补充部分内容

--- a/source/_posts/2023-06-23 Line-1.md
+++ b/source/_posts/2023-06-23 Line-1.md
@@ -15,7 +15,7 @@ description: 请上车的乘客往车厢中部走
 
 就想着欸要不就在车站被按下去前顺带去看一眼这样吧，虽说还有挺长一段时间，足够千畔多来几次了
 
-## 开始：从广佛线出发
+### 开始：从广佛线出发
 
 说起来，等我进广佛线的某个站时，里面挂着广州地铁的 logo，才发现广佛线从某种意义上说是由广州地铁负责运营的（）
 
@@ -55,7 +55,7 @@ description: 请上车的乘客往车厢中部走
 
 所以这里就只说部分站点啦，还请抱歉！
 
-#### 西塱
+### 西塱
 
 {% image /static/blog/line1/Untitled.webp 西塱 fancybox:true %}
 
@@ -67,9 +67,9 @@ description: 请上车的乘客往车厢中部走
 
 还有什么呢…忘记啦！
 
-#### 花地湾
+### 花地湾
 
-{% image /static/blog/line1/Untitled%201.webp 花地湾 fancybox:true %}
+{% image /static/blog/line1/Untitled%201.webp 花地湾站站台 fancybox:true %}
 
 有一说一，站在花地湾站的站台，让我觉得有一种……emm，宽敞明了的感觉（点头
 
@@ -95,13 +95,15 @@ description: 请上车的乘客往车厢中部走
 
 最后是坐着粉色外观的列车（长客庞巴迪车辆）离开了本站，往西塱方向出发
 
-#### 坑口
+{% image /static/blog/line1/goto-hk-up.webp 去往坑口站时，列车从地下到地面时的风景 fancybox:true %}
 
-{% image /static/blog/line1/Untitled%204.webp 坑口 width:350px fancybox:true %}
+### 坑口
+
+{% image /static/blog/line1/hangkou.webp 坑口站 2 站台西塱方向列车出站 fancybox:true %}
 
 ~~明明西塱的下一站是坑口，为什么要先说花地湾再说这里~~
 
-~~问就是因为当时坐过站了 2333~~
+~~问就是因为当时坐过站了 2333，所以上文就提到说「往西塱方向出发」~~
 
 坑口站和西塱站一样，是一号线的唯二地面车站之一…….
 
@@ -111,7 +113,7 @@ description: 请上车的乘客往车厢中部走
 
 还是和花地湾站和西塱站一样，都是需要走楼梯从地面一层站台到地面二层站厅
 
-{% image /static/blog/line1/Untitled%205.webp width:350px fancybox:true %}
+{% image /static/blog/line1/gk-zt-to-zt.webp 通往二楼站厅的楼梯 fancybox:true %}
 
 欸站厅……只知道当时出站再进站的时候有点绕，差点找不到出站口了（等下，为啥要出站再进站）
 
@@ -121,11 +123,11 @@ description: 请上车的乘客往车厢中部走
 
 总之站厅没有了……哦还是有一些的，有点像缝合（不是
 
+{% image /static/blog/line1/1-2-zt.webp 坑口站站厅 fancybox:true %}
+
 后续在写这一部分的时候查了一下资料，原来去年坑口站就在做翻新工作了，现在算下来应该已经翻新完成了吧，再找个时间去看看
 
-{% image /static/blog/line1/Untitled%206.webp 车厢一角 width:350px fancybox:true %}
-
-#### 其他站
+### 其他站
 
 根据前文所说，下完两三个站之后就不想下了，一是客流量多，二是觉得有点尴尬什么的
 
@@ -159,15 +161,27 @@ description: 请上车的乘客往车厢中部走
 
 大概坐了也快…一个多小时吧，就来到了本次列车终点站：广州东站
 
-但好像…似乎没有留图，草…哦有，就是拍得有点炸裂（）
+{% image /static/blog/line1/gzd-zdz-zt.wbep 广州东站（终点站）站台 fancybox:true %}
+
+要说当时有什么图的话…似乎没有留图，草…哦有，就是拍得有点炸裂（）
 
 {% image /static/blog/line1/Untitled%2014.webp 仰头拍天花板是吧 fancybox:true %}
+
+虽说可以换乘三号线来着，但这次目的也达到了，因此就不必换乘这样了，于是乎就在附近溜达了一下，就回去了
+
+有一说一，挺难得的在地铁站看到那种大概上个世纪还是什么的总之就是有一定年龄的，需要用手转动推杆的闸门
+
+太酷了不是吗
+
+{% image /static/blog/line1/gzd-exit.webp 出闸处中需要用手转动推杆的闸门 fancybox:true %}
 
 ~~此时的我还没想到，未来的某个时候，自己还会再次光临广州东站，并且以此为起点，渡过一个难忘的一周，尽请期待…（stop，不准挖坑！）~~
 
 好啦，写到这里的话文章也该结束了，毕竟这一篇主要是写去年国庆的时候坐一号线这件事
 
 但可惜呢，也快一年了，外加千畔的记性嘛…懂的都懂，所以写的不是很多，而且看着还有点乱糟糟什么的哈哈
+
+~~额以及自己没想到自己会补充一些图片或者内容什么的（~~
 
 25 年啊，过得也是挺快的，至于未来的广州地铁（或者说是广佛两地的地铁）会发展成怎么样，还是把答案交给时间这样
 
@@ -180,6 +194,10 @@ description: 请上车的乘客往车厢中部走
 那我们下一次更新见
 
 ~~（吐槽一下，在学校机房完成这篇文章剩下的 50% 时，卡了两次了…乐色电脑！）~~
+
+~~结果没想到自己放假了还会要把给这篇文章做一些修改什么的，唉，因为在亲戚家是真的没事情干啊啊啊啊啊~~
+
+{% image /static/blog/line1/chexiang.webp 车厢一角 fancybox:true %}
 
 ## 附加一：What Notion AI say?
 
