post Line-1 添加部分内容和图片

--- a/source/_posts/2023-06-23 Line-1.md
+++ b/source/_posts/2023-06-23 Line-1.md
@@ -5,7 +5,7 @@ updated: 2023-07-23 21:59:00
 tags:
 description: 请上车的乘客往车厢中部走，本次列车终点站：广州东站
 cover: /static/blog/line1/chexiang.webp
-banner: /static/blog/line1/DiYuXi.webp
+banner: /static/blog/line1/welcome-to-guangzhou-metro.webp
 ---
 在去年的国庆假期期间，千畔因为一些事情~~被迫~~南下，在广州附近暂居
 
@@ -25,7 +25,7 @@ banner: /static/blog/line1/DiYuXi.webp
 
 乘坐的列车外部装饰挺有佛山味（确信），进入列车后发现车是新的，显示屏 UI 什么的也是新的
 
-至于广播那不必说了（
+至于广播那不必说了吧，广州地铁的（
 
 ## 换乘：西塱站的地下与地面换乘
 
@@ -43,6 +43,8 @@ banner: /static/blog/line1/DiYuXi.webp
 
 从广佛线换乘到一号线，装修风格也随之变化，从广佛线中的广州地铁常用装修风格，到临时换乘通道中的简约设计风格（点头），再到一号线的八九十年代的瓷砖装修风格~~，不知道的还以为是穿越了~~
 
+{% image /static/blog/line1/01-01-zhanting.webp 一号线西塱站站厅 fancybox:true %}
+
 也不知道因十号线施工而暂停使用的换乘通道什么时候重新启用，有机会的话到时候再体验一下
 
 ## 正文：本次列车终点站为广州东站
@@ -59,15 +61,23 @@ banner: /static/blog/line1/DiYuXi.webp
 
 ### 西塱
 
-{% image /static/blog/line1/Untitled.webp 西塱 fancybox:true %}
+{% image /static/blog/line1/Untitled.webp 西塱站书法字标识 fancybox:true %}
 
 西塱这个倒不用说太多来着？看着上面这图都能感到满满的年代感吧
 
 没记错的话，拍摄点位于二站台和三站台，面朝一站台
 
+{% image /static/blog/line1/01-01-02-zhantai.webp 从楼梯下到 2 与 3 站台 fancybox:true %}
+
 西塱的话，大概也是为数不多的同时使用岛式站台和侧式站台的站点
 
 还有什么呢…忘记啦！
+
+当然，列车出站之后留意窗外，倒是可以发现一些类似于列车停车场的房子什么的吧
+
+好像大概还是两栋，长的！（）
+
+{% image /static/blog/line1/xilang-tingche.webp 其实这张图是列车进站的时候拍的x fancybox:true %}
 
 ### 花地湾
 
@@ -137,6 +147,8 @@ banner: /static/blog/line1/DiYuXi.webp
 
 {% image /static/blog/line1/Untitled%207.webp 长寿路站 width:350px fancybox:true %}
 
+{% image /static/blog/line1/huangsha.webp 黄沙站 fancybox:true %}
+
 {% image /static/blog/line1/Untitled%208.webp 西门口站 width:350px fancybox:true %}
 
 {% image /static/blog/line1/Untitled%209.webp 农讲所站 width:350px fancybox:true %}
@@ -145,7 +157,7 @@ banner: /static/blog/line1/DiYuXi.webp
 
 应该也是为数不多的在天花板上开槽的站点吧（大雾
 
-{% image /static/blog/line1/Untitled%2010.webp width:350px fancybox:true %}
+{% image /static/blog/line1/Untitled%2010.webp 杨箕站 width:350px fancybox:true %}
 
 抱歉手抖…啊应该是等列车启动了之后才想起要拍照，匆匆忙忙的拍下了这一张模糊的照片
 
@@ -221,7 +233,7 @@ banner: /static/blog/line1/DiYuXi.webp
 
 {% image /static/blog/line1/Untitled%2015.webp width:350px fancybox:true %}
 
-下车之后发现这她喵的是侧式站台…但…
+下车之后发现这她喵的是侧式站台…但…（其实侧式站台只提供下车）
 
 墙壁很有特色！看着应该是将地铁站周围的地什么的以一种忘记怎么描述的手法来装饰这个墙
 
@@ -232,13 +244,13 @@ banner: /static/blog/line1/DiYuXi.webp
 
 只能说，cool！
 
-{% image /static/blog/line1/Untitled%2016.webp width:350px fancybox:true %}
+{% image /static/blog/line1/caihongqiao.webp 彩虹桥站站台墙壁 fancybox:true %}
 
 至于天花板，则是呼应了彩虹桥站这个名称，虽说看着好像就…有点奇怪
 
 但加上地面的反光什么的，实际体验也是不错的
 
-{% image /static/blog/line1/Untitled%2017.webp width:350px fancybox:true %}
+{% image /static/blog/line1/caihongqiao-zhanting.webp 彩虹桥站站厅 fancybox:true %}
 
 上到站厅，只能以一个「大」来形容
 
@@ -246,11 +258,11 @@ banner: /static/blog/line1/DiYuXi.webp
 
 或许是因为正值国庆，外加开通没多久，所以站厅上有挺多人在那拍照留念的
 
-{% image /static/blog/line1/Untitled%2018.webp fancybox:true %}
+{% image /static/blog/line1/Untitled%2018.webp 看，天花板会变颜色！ fancybox:true %}
 
 以及，天花板上的装饰灯倒是可以变化的~~，这不是废话吗~~
 
-{% image /static/blog/line1/Untitled%2019.webp fancybox:true %}
+{% image /static/blog/line1/Untitled%2019.webp 其实应该算是 1/3 全貌 fancybox:true %}
 
 上到负一楼的 B 入口附近，就可以看到大致的全貌了
 
@@ -260,10 +272,12 @@ banner: /static/blog/line1/DiYuXi.webp
 
 后面查了一下，发现还有挺多地方我没有发现，例如说 D 口通道的彩虹墙，利用光线折射营造出彩虹的效果什么的
 
-当然最后是在负一楼录了一段视频之后就匆匆回家了，毕竟那时候家里人已经打电话问千畔在哪了，都准备煮饭了这样
+当然最后是在负一楼录了一段视频之后就匆匆回家了，毕竟那时候家里人已经打电话问千畔在哪了，都准备吃饭了这样
 
-最后呢，并没按照来时的路线回临时的家，而是选择了坐五号线，然后转公交来结束这一次的旅行（？）
+最后呢，并没按照来时的路线回临时的家，而是选择了坐 X 号线，然后换乘公交来结束这一次的旅行（？）
 
 毕竟在夜晚中，公交上的风景也是挺好看的嘛
 
-~~就是车少人多易拥挤~~
+~~就是晚高峰嘛...车少人多易拥挤~~
+
+{% image /static/blog/line1/caihongqiao-zhantai.webp 不完全是侧式站台啦...两边都可以开门的说，笨蛋千畔 fancybox:true %}
