new post / theme update / post update
  - 新文章 oneplus-8t
  - 文章添加分类
  - 同步主题更新

--- a/source/_posts/2022.md
+++ b/source/_posts/2022.md
@@ -2,10 +2,10 @@
 title: '2022 年的总结，但是没想好标题，还加更了内容（'
 date: '2022-12-18'
 updated: 2023-07-16 18:23:00
-tags: 
-  - 年终总结
+tags:
 description: "春が訪れますように、笑顔でまた会えますように"
 canonicalUrl: '2022'
+categories: 年终总结
 ---
 
 啊偶…今年的数据似乎不够哦
