--- a/source/_posts/2023-06-23 Line-1.md
+++ b/source/_posts/2023-06-23 Line-1.md
@@ -2,7 +2,7 @@
 title: 因为无聊于是去坐了一趟广州地铁一号线这件事
 date: 2023-05-31 10:20:59
 updated: 2023-07-23 21:59:00
-tags:
+tags: 地铁
 description: 请上车的乘客往车厢中部走，本次列车终点站：广州东站
 cover: /static/blog/line1/chexiang.webp
 banner: /static/blog/line1/welcome-to-guangzhou-metro.webp
