--- a/source/_posts/2023-09-29 taiko-ch.md
+++ b/source/_posts/2023-09-29 taiko-ch.md
@@ -42,7 +42,7 @@ banner: /static/blog/taiko-ch/banner.你为什么要放这张图.webp
 
 - 曲库以中英日为主，但~~（部分分区？）~~日语歌偏多
   {% image /static/blog/taiko-ch/20230928_164817.webp 《爱你》《逆战》《被比较的孩子》《Dance Monkey》 fancybox:true width:500px %}
-- 有些比较熟知（或者是知名？）的日语歌的歌名基本都采用了中文翻译，例如说~~[《群青》](https://www.youtube.com/watch?v=Y4nEEZwckuU) / ~~[《被比较的孩子》](https://www.youtube.com/watch?v=olWvy0PiLfA)，虽说这样反而有点不太习惯了
+- 有些比较熟知（或者是知名？）的日语歌的歌名基本都采用了中文翻译，例如说 {% del <a href="https://www.youtube.com/watch?v=Y4nEEZwckuU">《群青》</a> / %} [《被比较的孩子》](https://www.youtube.com/watch?v=olWvy0PiLfA)，虽说这样反而有点不太习惯了
   {% image /static/blog/taiko-ch/20230928_165243.webp 《怪物》《群青》《向夜晚崩去》 fancybox:true width:500px %}
 - 有初音的歌（似乎打 v 家曲子的时候...算了自己看吧！）
   {% image /static/blog/taiko-ch/20230928_170804.webp 顺利过关！ fancybox:true width:500px %}
