--- a/source/_posts/2023-06-23 Line-1.md
+++ b/source/_posts/2023-06-23 Line-1.md
@@ -8,6 +8,10 @@ cover: /static/blog/line1/chexiang.webp
 banner: /static/blog/line1/welcome-to-guangzhou-metro.webp
 categories: 记录
 outdate_month: 12
+poster:
+  headline: 因为无聊于是去坐了一趟广州地铁一号线这件事
+  topic: 请上车的乘客往车厢中部走，本次列车终点站：广州东站
+  color: white
 ---
 在去年的国庆假期期间，千畔因为一些事情~~被迫~~南下，在广州附近暂居
 
