--- a/source/_posts/2023.md
+++ b/source/_posts/2023.md
@@ -11,7 +11,7 @@ tags:
   - 出行
 categories: 年终总结
 description: 几颗流星在夜空中画出了几道火红的线条。我良久地凝望着黑里透蓝、繁星闪烁、深不可测，一直望到觉得脚下的大地开始浮动。
-
+cover: /static/blog/2023/EXIT.jpg
 ---
 
 {% border 多图警告 color:warning %}
