--- a/source/_posts/2023.md
+++ b/source/_posts/2023.md
@@ -11,12 +11,11 @@ tags:
   - 出行
 categories: 年终总结
 description: 几颗流星在夜空中画出了几道火红的线条。我良久地凝望着黑里透蓝、繁星闪烁、深不可测，一直望到觉得脚下的大地开始浮动。
-cover: /static/blog/2023/EXIT.jpg
+cover: /static/blog/2023/EXIT.webp
 ---
 
 {% border 多图警告 color:warning %}
-目前，本篇总结已经引用了 Null 张图片
-请注意，千畔已将这篇总结里出现的图片都转换成 WebP
+目前，本篇总结已经引用了 21 张图片
 {% endborder %}
 
 ## 🐱 前言
@@ -60,7 +59,7 @@ cover: /static/blog/2023/EXIT.jpg
 
 在乘坐的时候千畔也会去录制一些广播，当然不是因为千畔是地铁迷，只是想着去记录点什么这样，供未来的千畔一些回忆的素材什么的
 
-{% video /static/blog/2023/line7-GZN.ogg subtitle:/static/blog/2023/line7-GZN.srt poster:/static/blog/2023/line-7.jpg %}
+{% video /static/blog/2023/line7-GZN.ogg subtitle:/static/blog/2023/line7-GZN.srt poster:/static/blog/2023/line-7.webp %}
 
 ~~所以你羊角什么时候…（被打）~~
 
@@ -88,7 +87,7 @@ cover: /static/blog/2023/EXIT.jpg
 
 肇庆给千畔印象最深，毕竟曾在那调侃过「这似乎就是围着一个湖发展出来了个城市」
 
-{% image /static/blog/2023/zhaoqin.jpg 其实并不是 fancybox:true %}
+{% image /static/blog/2023/zhaoqin.webp 其实并不是 fancybox:true %}
 
 还有那上对公交了但结果以为上错了于是立马下车后发现上对了后千畔贡献出了第一次…异地在高德地图上打车
 
@@ -96,17 +95,17 @@ cover: /static/blog/2023/EXIT.jpg
 
 以及贡献出了第一次…以注册帐号的方式游玩舞萌 DX
 
-{% image /static/blog/2023/haoduoxiyiji.jpg 好多洗衣机（不是） fancybox:true %}
+{% image /static/blog/2023/haoduoxiyiji.webp 好多洗衣机（不是） fancybox:true %}
 
 （第一次玩是在去福州前一周在某机厅见面，然后被对方建议去玩玩…当时千畔还以为自己以后不会很频繁的去玩…）
 
 （当然也不会忘记那天，千畔在太二酸菜鱼被辣到......以及......）
 
-{% image /static/blog/2023/taier.jpg Moe：窝们一定是闲得慌.avif fancybox:true %}
+{% image /static/blog/2023/taier.webp Moe：窝们一定是闲得慌.avif fancybox:true %}
 
 厦门的话印象不多，但坐着 BRT 进岛时的风景还是挺好看的
 
-{% image /static/blog/2023/xiamen.jpg fancybox:true %}
+{% image /static/blog/2023/xiamen.webp fancybox:true %}
 
 武汉的话，繁华吧，还挺多人的（废话）
 
@@ -114,26 +113,26 @@ cover: /static/blog/2023/EXIT.jpg
 
 {%split%}
 <!-- cell left -->
-{% image /static/blog/2023/wuhan.jpg width:350px fancybox:true %}
+{% image /static/blog/2023/wuhan.webp width:350px fancybox:true %}
 <!-- cell right -->
-{% image /static/blog/2023/reganmian.jpg width:350px fancybox:true %}
+{% image /static/blog/2023/reganmian.webp width:350px fancybox:true %}
 {%endsplit%}
 
 去深圳只是为了帮人打印报销凭据，以及顺路修手机，所以没过多的时间在深圳里面悠悠闲逛，大部分时间都花在了深圳地铁上
 
-{% image /static/blog/2023/shenzhen.jpg fancybox:true %}
+{% image /static/blog/2023/shenzhen.webp fancybox:true %}
 
 至于东莞…嗯，好大，看着就感觉很多地方待开发一样~~（毕竟建筑比较疏？）~~
 
 ~~麻了，好像有好多没拍~~
 
-{% image /static/blog/2023/dongguan.jpg fancybox:true %}
+{% image /static/blog/2023/dongguan.webp fancybox:true %}
 
 还有那可恶的东莞轨道交通虎门火车站，终点站下车后需要上桥到隔壁站台才能离开站台（气）
 
 除此之外也就没什么了？有，特意坐绿皮火车去佛山站算不算（）
 
-{% image /static/blog/2023/foshanzhan.jpg 在出站口拍的 fancybox:true %}
+{% image /static/blog/2023/foshanzhan.webp 在出站口拍的 fancybox:true %}
 
 明年的话千畔还会继续争取出远门的机会的，至于会去哪里呢，保密（
 
@@ -171,9 +170,9 @@ cover: /static/blog/2023/EXIT.jpg
 
 {%split%}
 <!-- cell left -->
-{% image /static/blog/2023/maimaidx-2022.jpg 无意义照片 fancybox:true %}
+{% image /static/blog/2023/maimaidx-2022.webp 无意义照片 fancybox:true %}
 <!-- cell right -->
-{% image /static/blog/2023/maimaidx-2023.jpg 嘿，升级当天喜提断网 fancybox:true %}
+{% image /static/blog/2023/maimaidx-2023.webp 嘿，升级当天喜提断网 fancybox:true %}
 {%endsplit%}
 
 音游方面的话，玩过几款游戏大概都是别人推荐千畔去玩玩的
@@ -193,17 +192,17 @@ cover: /static/blog/2023/EXIT.jpg
 当然以上游戏玩的时间加起来真不如 maimai......
 
 {% folding 令人血压高的内容...... open:bool color:yellow %}
-{% image /static/blog/2023/maimai.png 等下，我打码干什么 fancybox:false %}
-{% image /static/blog/2023/Rotaeno.png 好屑的样子 fancybox:false %}
-{% image /static/blog/2023/pjsk.png 疑惑.jpg fancybox:false %}
+{% image /static/blog/2023/maimai.webp 等下，我打码干什么 fancybox:false %}
+{% image /static/blog/2023/Rotaeno.webp 好屑的样子 fancybox:false %}
+{% image /static/blog/2023/pjsk.webp 疑惑.webp fancybox:false %}
 {% folding Phogros 的，太长了，单独再折叠一次 open:bool color:yellow %}
-{% image /static/blog/2023/phi.jpg fancybox:false %}
+{% image /static/blog/2023/phi.webp fancybox:false %}
 {% endfolding %}
 {% endfolding %}
 
 mc 今年也有去玩玩的，主要是在别人服务器里…忘记了，总之房子建得挺抽象就是了
 
-{% image /static/blog/2023/my-home.png 非常抽象的房子，爱来自千畔的设计 fancybox:true %}
+{% image /static/blog/2023/my-home.webp 非常抽象的房子，爱来自千畔的设计 fancybox:true %}
 
 其他的话…能找到千畔的 steam 账号就知道了（x
 
@@ -291,7 +290,7 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 而回学校的话就是全带上了，毕竟学校没地方给你充电，千畔也不想花点钱去租那些共享充电宝
 
-{% image /static/blog/2023/chongdianbao.jpg 感谢葵花花送的 3w 毫安的充电宝 qwq fancybox:true %}
+{% image /static/blog/2023/chongdianbao.webp 感谢葵花花送的 3w 毫安的充电宝 qwq fancybox:true %}
 
 充电宝很多，那充电线…也确实有几条，甚至还有 C to C 的线，忘记都是从哪来的了，总之不是 pdd 9.9 那种线就是了
 
@@ -357,7 +356,7 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 还有其他的就不一一说出来了，还是怀念那牛杂店啊…（）
 
-{% image /static/blog/2023/shiqijia.jpg 在食其家吃个饭~ fancybox:true %}
+{% image /static/blog/2023/shiqijia.webp 在食其家吃个饭~ fancybox:true %}
 
 ## 🌌 后记
 
@@ -369,7 +368,7 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 但是千畔写两三行就看其他地方，然后再写两三行后再干其他事……以后还是要专心致志一些
 
-转眼间也到 12 月中旬了，这篇总结也差不多咕咕咕了快一个月，这就是千畔.jpg
+转眼间也到 12 月中旬了，这篇总结也差不多咕咕咕了快一个月，这就是千畔.webp
 
 当然，能放下平常的伪装，随心所欲的用平常的心情打出平常的内容，也算是一种享受？希望在接下来的时间里还有这种机会
 
@@ -409,7 +408,7 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 生日快乐，TaranakiNeko 🎂 
 
-{% image /static/blog/2023/EXIT.jpg fancybox:false %}
+{% image /static/blog/2023/EXIT.webp fancybox:false %}
 
 {% image /static/blog/2023/5555.webp width:200px fancybox:false %}
 
