--- a/source/_posts/2023.md
+++ b/source/_posts/2023.md
@@ -11,13 +11,14 @@ tags:
   - 出行
 categories: 年终总结
 description: 几颗流星在夜空中画出了几道火红的线条。我良久地凝望着黑里透蓝、繁星闪烁、深不可测，一直望到觉得脚下的大地开始浮动。
-cover: /static/blog/2023/EXIT.webp
+cover: /static/blog/2023/cover.webp
+banner: /static/blog/2023/banner.webp
 ---
 
 [^96]
 
 {% border 多图警告 color:warning %}
-目前，本篇总结已经引用了 21 张图片
+目前，本篇总结已经引用了 27 张图片
 {% endborder %}
 
 ## 🐱 前言
@@ -31,6 +32,8 @@ cover: /static/blog/2023/EXIT.webp
 而且每年保持相同的格式的话……就有一种千篇一律的感觉，所以千畔的年终总结会尽可能保持每年都有一些花样什么的
 
 当然花样什么的，也有可能和别人的相撞，如果遇到这种情况了的话，倒也算是个可以去交友的机会这样吧
+
+{% image /static/blog/2023/gotoGZN.webp 佛山地铁 2 号线往广州南站方向 fancybox:true %}
 
 ## 🚝 请上车的乘客往车厢中部走，本次列车终点站为…
 
@@ -53,6 +56,8 @@ cover: /static/blog/2023/EXIT.webp
 
 只能说有苦也有喜，喜偏多，毕竟能面到人已经是很棒的事情了不是吗
 
+{% image /static/blog/2023/good.webp 干杯~（） fancybox:true %}
+
 剩下的时间吧……要不就是在家，要不就是在学校
 
 细心的人可能会发现，这部分的标题是来自于广州地铁的车厢广播
@@ -61,11 +66,9 @@ cover: /static/blog/2023/EXIT.webp
 
 在乘坐的时候千畔也会去录制一些广播，当然不是因为千畔是地铁迷，只是想着去记录点什么这样，供未来的千畔一些回忆的素材什么的
 
-{% video /static/blog/2023/line7-GZN.ogg subtitle:/static/blog/2023/line7-GZN.srt poster:/static/blog/2023/line-7.webp %}
-
 ~~所以你羊角什么时候…（被打）~~
 
-{% image /static/blog/line1/hangkou.webp 坑口站 2 站台西塱方向列车出站 fancybox:true %}
+{% video /static/blog/2023/line7-GZN.ogg subtitle:/static/blog/2023/line7-GZN.srt poster:/static/blog/2023/line-7.webp %}
 
 ## 🚃 女士们先生们，你们好，由重庆开往…
 
@@ -288,6 +291,8 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 备用机就不好透露什么了，总之是 vivo y 系列的，线下机嘛
 
+{% image /static/blog/2023/oh.webp oh...... fancybox:true %}
+
 充电宝，日常出门的话千畔会根据充电宝电量来选择拿哪个出门，一般都是小米 2w 容量的
 
 而回学校的话就是全带上了，毕竟学校没地方给你充电，千畔也不想花点钱去租那些共享充电宝
@@ -328,6 +333,8 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 跟千畔有过 pm 的人可能会留意到，千畔跟葵野之间有种神秘的关系
 
 千畔在这里也卖不了关子，于是就直接不说了，还是希望这段关系能持久下去吧
+
+{% image /static/blog/2023/JustBeFriend.webp 并没有少了什么哦 fancybox:true %}
 
 ## 🍟 麦当劳薯条\~ 条~ 条\~ 条~
 
@@ -408,9 +415,9 @@ aqua 就是属于那种有感情的，无论哪首歌都是，差不多和鹿乃
 
 那么，下一篇文章再见 👋
 
-生日快乐，TaranakiNeko 🎂 
+生日快乐，**TaranakiNeko** 🎂 
 
-{% image /static/blog/2023/EXIT.webp fancybox:false %}
+{% image /static/blog/2023/EXIT.webp fancybox:true %}
 
 {% image /static/blog/2023/5555.webp width:200px fancybox:false %}
 
