--- a/source/_posts/2023.md
+++ b/source/_posts/2023.md
@@ -98,6 +98,8 @@ banner: /static/blog/2023/banner.webp
 
 福州的话那就是「那人行道好大啊」（千畔实在想不出当时为什么会说出这种话而且也没拍照 hhh）
 
+当然啊，借用某个朋友话说就是「城市节奏蛮慢的，好好享受」
+
 以及贡献出了第一次…以注册帐号的方式游玩舞萌 DX
 
 {% image /static/blog/2023/haoduoxiyiji.webp 好多洗衣机（不是） fancybox:true %}
