--- a/source/_posts/2024.md
+++ b/source/_posts/2024.md
@@ -24,7 +24,7 @@ poster:
 
 {% psw 但这也不是你大半夜坐在床上拿着 Notion 重写一次来熬夜的缘故啊喂千畔 %}
 
-## 🔁 本次为内环列车，下一站…
+## 🔁 本次为内环列车，下一站广州东站
 
 去年的总结是拿广州地铁的广播做这部分的小标题，今年也是如此
 
@@ -34,7 +34,9 @@ poster:
 
 ~~为什么不是[三东延](https://zh.wikipedia.org/zh-cn/%E5%B9%BF%E5%B7%9E%E5%9C%B0%E9%93%813%E5%8F%B7%E7%BA%BF#%E4%B8%9C%E5%BB%B6%E6%AE%B5%EF%BC%88%E7%95%AA%E7%A6%BA%E5%B9%BF%E5%9C%BA%E8%87%B3%E6%B5%B7%E5%82%8D%EF%BC%89)还是[佛三在建段](https://zh.wikipedia.org/zh-cn/%E4%BD%9B%E5%B1%B1%E5%9C%B0%E9%93%813%E5%8F%B7%E7%BA%BF)的呢，我不知道（被打~~
 
-毕竟以后畔在广州生活时的出行可能就要靠这个新开的 11 号线了（才怪）
+毕竟以后畔在广州生活时的出行可能就要靠这个新开的 11 号线了...
+
+才怪，line11 广州站和广州东站要飞站，这两站开通都得要猴年马月了，所以到时候还要换乘转转乐
 
 {% image /static/blog/2024/line11-diyuan.webp 广州地铁 11 号线棣园站站台 fancybox:true %}
 
@@ -50,7 +52,7 @@ poster:
 
 [^12]: 借了一下这首歌的中文翻译：心跳不止
 
-{% image /static/blog/2024/with-skynext.webp 💖 fancybox:true %}
+{% image /static/blog/2024/with-skynext.webp あなたをあなたを 愛してる fancybox:true %}
 
 ## 🍟 喜欢您来
 
@@ -114,7 +116,17 @@ poster:
 
 好了就此打住，再写下去{% psw 就真的成千畔勇创麦当劳专题报道了 %}
 
-## 🚅 广东城际范围内全程禁烟，上下车时请注意列车与站台的空隙，多谢合作
+> {% u 笑声中浮过 几张旧模样 %}
+> <br>
+> {% u 留在梦田里 永远不散场 %}
+> <br>
+> {% u 暖光中醒来 好多话要讲 %}
+> <br>
+> {% u 世界那么多人 可是它不声 不响[^13] %}
+
+[^13]: 选自 [「这世界那么多人」](https://www.youtube.com/watch?v=xLscpRjb8DI)，曾在麦麦餐厅五月歌单里出现过
+
+## 🚅 广东城际范围内全程禁烟，上下车时请注意列车与站台的空隙
 
 在麦当劳提交辞职后，畔的生活可谓多姿多彩…的反义词：平淡无味
 
@@ -146,6 +158,8 @@ poster:
 看着别人喝喜茶的畔看了眼麦当劳 App，发现有 9.9 HKD 厚椰奶铁，但最后还是没喝成呜呜呜
 
 也还是希望明年能跑更多的地方去旅游什么的吧，提前规划的习惯也还是有的（点头）
+
+{%psw 就是有时候会把人逼疯（ %}
 
 ## 📱 EDC in 2024
 
@@ -192,6 +206,24 @@ poster:
 现在再看，似乎都已经固定得差不多了，无论是线上亦或者线下，就只在自己所谓的小圈子里活跃着
 
 天啊天啊，一想起那些事我只能说太糟糕了，还是草草带过吧
+
+> {% u 除了这些，今年也就和往年差不多了，认识了新的朋友，因为各种原因不得不跟旧朋友，或者是素未相识的网友 say goodbye[^14] %}
+
+[^14]: [期待と不安を同じくらい抱きしめて](https://blog.nekoq.top/blog/2023#%F0%9F%A9%B7-Just-Be-Friends)
+
+虽说今年也不算是认识了新朋友，起码只是说早该认识了而已
+
+有喜有厌，有初见再见也有永远不见
+
+心态也慢慢的算是磨平了，或者说是处于一种养老的状态，对一些事感到了麻木吧
+
+所以下半年活得还算是挺开心和愉悦的，起码是大部分时候 {% psw 没心没肺.jpg %}
+
+{% psw 只不过有时候会对对方的一些动作敏感起来然后会有点多想，有点添麻烦了就是 %}
+
+因此，我还是很庆幸我这大概五六年来认识了许多朋友
+
+也非常的感谢，无论是在线上还是在线下，亦或两者都是
 
 {% image /static/blog/2024/shenzhen.webp fancybox:true %}
 
