--- a/source/_posts/2025-12-31 2025.md
+++ b/source/_posts/2025-12-31 2025.md
@@ -121,7 +121,7 @@ poster:
     10. [「琥珀の身体」 - HIMEHINA](https://music.163.com/#/song?id=1432169641)
 {% endfolding %}
 
-{% folding last.fm 上的数据 child:tabs %}
+{% folding last.fm 上的数据[^4] child:tabs %}
     1. [fraq](https://www.last.fm/zh/music/owl%EF%BC%8Atree+feat.+%E3%81%B9%E3%82%93%E3%81%96/_/fraq)
     2. [Resolution](https://www.last.fm/zh/music/%E7%9A%87%E5%9F%8E%E3%82%BB%E3%83%84%E3%83%8A(CV:%E5%85%AB%E5%B7%BB%E3%82%A2%E3%83%B3%E3%83%8A)/_/Resolution)
     3. [CAFUNE](https://www.last.fm/zh/music/%E9%B9%BF%E4%B9%83/_/CAFUNE)
@@ -131,8 +131,9 @@ poster:
     7. [Secret Illumination](https://www.last.fm/zh/music/Yooh/_/Secret+Illumination)
     8. [ヴァンパイア](https://www.last.fm/zh/music/DECO*27/_/%E3%83%B4%E3%82%A1%E3%83%B3%E3%83%91%E3%82%A4%E3%82%A2)
     9. [泥の分際で私だけの大切を奪おうだなんて](https://www.last.fm/zh/music/Tuyu/_/%E6%B3%A5%E3%81%AE%E5%88%86%E9%9A%9B%E3%81%A7%E7%A7%81%E3%81%A0%E3%81%91%E3%81%AE%E5%A4%A7%E5%88%87%E3%82%92%E5%A5%AA%E3%81%8A%E3%81%86%E3%81%A0%E3%81%AA%E3%82%93%E3%81%A6)
-    10. [熱異常](https://www.last.fm/zh/music/25%E6%99%82%E3%80%81%E3%83%8A%E3%82%A4%E3%83%88%E3%82%B3%E3%83%BC%E3%83%89%E3%81%A7%E3%80%82+feat.+%E5%AE%B5%E5%B4%8E%E5%A5%8F&%E6%9C%9D%E6%AF%94%E5%A5%88%E3%81%BE%E3%81%B5%E3%82%86&%E6%9D%B1%E9%9B%B2%E7%B5%B5%E5%90%8D&%E6%9A%81%E5%B1%B1%E7%91%9E%E5%B8%8C&KAITO/_/%E7%86%B1%E7%95%B0%E5%B8%B8)[^4]
+    10. [熱異常](https://www.last.fm/zh/music/25%E6%99%82%E3%80%81%E3%83%8A%E3%82%A4%E3%83%88%E3%82%B3%E3%83%BC%E3%83%89%E3%81%A7%E3%80%82+feat.+%E5%AE%B5%E5%B4%8E%E5%A5%8F&%E6%9C%9D%E6%AF%94%E5%A5%88%E3%81%BE%E3%81%B5%E3%82%86&%E6%9D%B1%E9%9B%B2%E7%B5%B5%E5%90%8D&%E6%9A%81%E5%B1%B1%E7%91%9E%E5%B8%8C&KAITO/_/%E7%86%B1%E7%95%B0%E5%B8%B8)
 {% endfolding %}
+
 
 玩过 SBGA 系音游[^3]的或多或少能认识上面所列举的歌都与其中有联系，无论是原创还是联动授权
 
@@ -173,5 +174,5 @@ poster:
 [^1]: [世界计划 缤纷舞台！ feat.初音未来](https://zh.wikipedia.org/wiki/%E4%B8%96%E7%95%8C%E8%AE%A1%E5%88%92_%E7%BC%A4%E7%BA%B7%E8%88%9E%E5%8F%B0%EF%BC%81_feat.%E5%88%9D%E9%9F%B3%E6%9C%AA%E6%9D%A5)
 [^2]: [世界计划 缤纷舞台！ feat.初音未来](https://zh.wikipedia.org/wiki/%E4%B8%96%E7%95%8C%E8%AE%A1%E5%88%92_%E7%BC%A4%E7%BA%B7%E8%88%9E%E5%8F%B0%EF%BC%81_feat.%E5%88%9D%E9%9F%B3%E6%9C%AA%E6%9D%A5)
 [^3]: 此处特指 SEGA 发行的：舞萌 DX、中二节奏、音击、啤酒烧烤
-[^4]: 为「25時、ナイトコードで」版本，原版和这个翻唱版本都是非常好听，值得推荐
+[^4]: 熱異常为「25時、ナイトコードで」版本，原版和这个翻唱版本都是非常好听，值得推荐
 [^5]: 标题 / 封面 [さよならヒストリー](https://music.163.com/#/song?id=1957822357) ；描述 [Fraq](https://www.youtube.com/watch?v=NXc5t41G6-I)
